fix: add files and fix spacing and responsiveness of header-top section

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 10fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 144px 4fr;
     min-height: 100%;
 }
 
@@ -86,8 +86,10 @@
 
 .header-top {
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 48px;
     margin: 12px 0px 12px;
+    gap: 80px;
 }
 
 .header-bottom {
@@ -97,14 +99,13 @@
 
 .header-section-search {
     display: grid;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 70px 10fr;
     align-items: center;
     margin-left: 24px;
-    /* margin-right: 10px; */
 }
 
 .search-bar {
-    height: 30px;
+    height: max(30px,40%);
     background-color: #E2E8F0;
     border-radius: 15px;
     border-style: none;
@@ -120,13 +121,12 @@
     align-items: center;   
     grid-template-columns: repeat(2, 50px)  120px;
     justify-items: center;
-    justify-content: end;
-    margin-left: 30%;
-    margin-right: 10%;
+    justify-content: start;
+    margin-right: 50px;
 }
 
 .header-section-profile .profile{
-    height: 35px;
+    height: 40px;
     border-radius: 100%;
     border-color: #E2E8F0;
     border-style: solid;
@@ -137,5 +137,12 @@
     font-weight: 600;
 }
 
+.header-bottom .profile {
+    height: 60px;
+    border-radius: 100%;
+    border-color: #E2E8F0;
+    border-style: solid;
+    border-width: 1px;
+}
 
 
